# Task2_Spider

./: CMakeLists.txt  Makefile  README.md  TaskSpider.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  moc_spider.cpp  moc_widget.cpp  resources.qrc  spider.cpp  spider.h  spider.qrc  spiderweb.cpp  spiderweb.h  src.qrc  widget.cpp  widget.h
Task2_Spider-master/: Makefile  Makefile.Debug  Makefile.Release  README.md  TaskSpider.pro  TaskSpider.pro.user.101f168  TaskSpider.pro.user.1566fec  TaskSpider.pro.user.5ba7116  TaskSpider.pro.user.9bf949b  object_script.TaskSpider.Debug  object_script.TaskSpider.Release  res.qrc  spider.cpp  spider.h  web.h  widget.cpp  widget.h
Task2_Spider-master/debug/: moc_spider.cpp  moc_widget.cpp  qrc_res.cpp
debug/: moc_predefs.h
src/: limited_queue.hpp
src/spider/: spider.cpp  spider.h
src/widget/: widget.cpp  widget.h
